explicitly include nashorn in pom